--- a/index.html
+++ b/index.html
@@ -1,7 +1,84 @@
+
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--    <body>-->
+<!--        <h1>Hello World</h1>-->
+<!--        <p>I'm hosted with GitHub Pages.</p>-->
+<!--    </body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Programmer Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 2rem 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        .project {
+            margin-bottom: 2rem;
+            padding: 1rem;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        h1 {
+            margin-bottom: 0.5rem;
+        }
+        p {
+            margin-bottom: 0.5rem;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<header>
+    <h1>John Doe</h1>
+    <p>Software Developer</p>
+</header>
+<div class="container">
+    <h2>About Me</h2>
+    <p>I am a passionate programmer with experience in web development, Python, and machine learning.</p>
+
+    <h2>Projects</h2>
+    <div class="project">
+        <h3>Personal Website</h3>
+        <p>A portfolio website showcasing my projects and skills. Built using HTML, CSS, and JavaScript.</p>
+    </div>
+    <div class="project">
+        <h3>Chat Application</h3>
+        <p>Developed a real-time chat application using Python and Flask framework.</p>
+    </div>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Python</li>
+        <li>Web Development</li>
+        <li>Machine Learning</li>
+        <li>Git</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <p>Email: john@example.com</p>
+    <p>GitHub: <a href="https://github.com/johndoe">github.com/johndoe</a></p>
+</div>
 </body>
 </html>
+
+
