--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--    <body>-->
-<!--        <h1>Hello World</h1>-->
-<!--        <p>I'm hosted with GitHub Pages.</p>-->
-<!--    </body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,22 +39,16 @@
 </head>
 <body>
 <header>
-    <h1>John Doe</h1>
+    <h1>Omar Cusma Fait</h1>
     <p>Software Developer</p>
 </header>
 <div class="container">
     <h2>About Me</h2>
-    <p>I am a passionate programmer with experience in web development, Python, and machine learning.</p>
-
-    <h2>Projects</h2>
-    <div class="project">
-        <h3>Personal Website</h3>
-        <p>A portfolio website showcasing my projects and skills. Built using HTML, CSS, and JavaScript.</p>
-    </div>
-    <div class="project">
-        <h3>Chat Application</h3>
-        <p>Developed a real-time chat application using Python and Flask framework.</p>
-    </div>
+    <p>
+        Bachelor’s degree in physics at the
+        <a href="https://df.units.it/">"Università degli studi di Trieste"</a>.
+        I am a passionate programmer, with experience in Python, and machine learning.
+    </p>
 
     <h2>Skills</h2>
     <ul>
@@ -74,11 +59,22 @@
         <li>Git</li>
     </ul>
 
+    <h2>Projects</h2>
+
+    <div class="project">
+        <h3>Personal Website</h3>
+        <p>A portfolio website showcasing my projects and skills. Built using HTML, CSS, and JavaScript.</p>
+    </div>
+
+    <div class="project">
+        <h3>Chat Application</h3>
+        <p>Developed a real-time chat application using Python and Flask framework.</p>
+    </div>
+
+
     <h2>Contact</h2>
-    <p>Email: john@example.com</p>
-    <p>GitHub: <a href="https://github.com/johndoe">github.com/johndoe</a></p>
+    <p>Email: omar.cusma.fait@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/omega97">github.com/Omega97</a></p>
 </div>
 </body>
 </html>
-
-
