edited personal info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programmer Portfolio</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,34 +37,73 @@
             margin-bottom: 0.5rem;
         }
     </style>
+
 </head>
 <body>
+
 <header>
     <h1>Omar Cusma Fait</h1>
-    <p>Software Developer</p>
+    <p>Student</p>
 </header>
+
 <div class="container">
+
+
+    <!--This section contains some info about me-->
     <h2>About Me</h2>
     <p>
-        Bachelor’s degree in physics at the
-        <a href="https://df.units.it/">"Università degli studi di Trieste"</a>.
-        I am a passionate programmer, with experience in Python, and machine learning.
+        While pursuing my bachelor’s degree I developed familiarity with complex problems in math and physics,
+        analytical thinking and problem-solving skills that have proven valuable in approaching challenges from a
+        logical perspective. I give my best when I’m working on projects that I am passionate about.
+        My experience with chess taught me to stay calm under pressure and to look for a better solution for any
+        given problem.
+        I am passionate about programming, numerical simulations and artificial intelligence.
     </p>
 
-    <h2>Skills</h2>
+
+    <!--My education-->
+    <h2>Education and Training</h2>
+    <p>
+        [2023] Bachelor’s degree in physics at the
+        <a href="https://df.units.it/">Università degli studi di Trieste</a>
+        [2023] Internship in astrophysical data analysis at the INAF (supervisor: Elena Orlando)
+        [2015] High School diploma at the "Istituto di Istruzione Superiore Gabriele D'Annunzio"
+    </p>
+
+    <!--List of tech-related things I know-->
+    <h2>Digital Skills</h2>
     <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Python</li>
-        <li>Web Development</li>
-        <li>Machine Learning</li>
-        <li>Git</li>
+        <li>Python (used in-depth during bachelor’s degree and especially for personal projects)</li>
+        <li>Pascal (Secondary school)</li>
+        <li>Krita (self-taught image editing)</li>
+        <li>Windows, Excel, Word, PowerPoint, Ubuntu</li>
     </ul>
 
+
+    <!--contact info-->
+    <h2>Contact</h2>
+    <p>Email: omar.cusma.fait@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/omega97">github.com/Omega97</a></p>
+
+
+    <!--This section contains some info about me-->
+    <h2>Other Facts About Me</h2>
+    <p>
+        [2015] Participant of “Scienze under 18”, an in-person activity that aims to bring math to the
+        attention of the public and young students (supervisor: Caterina Vicentini)
+        [2007-2010] Awarded 22 Chess medals in official tournaments
+    </p>
+
+
+    <!--list of some relevant projects that I have worked on-->
     <h2>Projects</h2>
 
     <div class="project">
-        <h3>Personal Website</h3>
-        <p>A portfolio website showcasing my projects and skills. Built using HTML, CSS, and JavaScript.</p>
+        <h3>Internship in astrophysical data analysis</h3>
+        <p>I created a GitHub repository that allows to study the local correlation between two
+            HEALPix images. It was an open-ended problem for which I had to come up with my own
+            solution to the problem.
+            Supervisor: Elena Orlando</p>
     </div>
 
     <div class="project">
@@ -72,9 +112,6 @@
     </div>
 
 
-    <h2>Contact</h2>
-    <p>Email: omar.cusma.fait@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/omega97">github.com/Omega97</a></p>
 </div>
 </body>
 </html>
