added some projecrs

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <p>
         While pursuing my bachelor’s degree I developed familiarity with complex problems in math and physics,
         analytical thinking and problem-solving skills that have proven valuable in approaching challenges from a
-        logical perspective. I give my best when I’m working on projects that I am passionate about.
+        logical perspective. I give my best when I’m working on projects that I am passionate about. <br />
         My experience with chess taught me to stay calm under pressure and to look for a better solution for any
-        given problem.
+        given problem. <br />
         I am passionate about programming, numerical simulations and artificial intelligence.
     </p>
 
@@ -65,10 +65,20 @@
     <h2>Education and Training</h2>
     <p>
         [2023] Bachelor’s degree in physics at the
-        <a href="https://df.units.it/">Università degli studi di Trieste</a>
-        [2023] Internship in astrophysical data analysis at the INAF (supervisor: Elena Orlando)
-        [2015] High School diploma at the "Istituto di Istruzione Superiore Gabriele D'Annunzio"
+        <a href="https://df.units.it/">Università degli studi di Trieste</a> <br />
+        [2023] Internship in astrophysical data analysis at the INAF (supervisor: Elena Orlando) <br />
+        [2015] High School diploma at the "Istituto di Istruzione Superiore Gabriele D'Annunzio" <br />
     </p>
+
+
+    <!--Languages-->
+    <h2>Language Skills</h2>
+    <ul>
+        <li>Italian (Mother tongue)</li>
+        <li>Slovenian (Mother tongue)</li>
+        <li>English (B2, British institutes)</li>
+    </ul>
+
 
     <!--List of tech-related things I know-->
     <h2>Digital Skills</h2>
@@ -86,11 +96,11 @@
     <p>GitHub: <a href="https://github.com/omega97">github.com/Omega97</a></p>
 
 
-    <!--This section contains some info about me-->
+    <!--This section contains other info about me-->
     <h2>Other Facts About Me</h2>
     <p>
         [2015] Participant of “Scienze under 18”, an in-person activity that aims to bring math to the
-        attention of the public and young students (supervisor: Caterina Vicentini)
+        attention of the public and young students (supervisor: Caterina Vicentini) <br />
         [2007-2010] Awarded 22 Chess medals in official tournaments
     </p>
 
@@ -99,18 +109,91 @@
     <h2>Projects</h2>
 
     <div class="project">
-        <h3>Internship in astrophysical data analysis</h3>
-        <p>I created a GitHub repository that allows to study the local correlation between two
-            HEALPix images. It was an open-ended problem for which I had to come up with my own
-            solution to the problem.
+        <h3>Internship in Astrophysical Data Analysis for Sky-map Correlation</h3>
+        <p>
+            I created a
+            <a href="https://github.com/Omega97/skymap_correlation">GitHub repository</a>
+            that allows to study the local correlation map between two HEALPix sky-maps.
+            The problem was open-ended, and I had to come up with my own solution, which was
+            to make a library for calculating the local correlation efficiently.
             Supervisor: Elena Orlando</p>
     </div>
 
     <div class="project">
-        <h3>Chat Application</h3>
-        <p>Developed a real-time chat application using Python and Flask framework.</p>
+        <h3>Mancala Self-reinforcement Learning AI</h3>
+        <p>
+            I created a self-reinforcement learning AI
+            <a href="https://github.com/Omega97/mancala">self-reinforcement learning AI</a>
+            for the game of Mancala. The agent uses MCTS to choose the best move. A NN-based
+            policy is used to guide the search. Roll-outs are performed to evaluate the leaf nodes.
+            The roll-outs are truncated and evaluated with a value-network. Both the value net and the policy are
+            trained on self-play data, generated with the help of a custom Mancala simulator that I created.
+
+        </p>
     </div>
 
+    <div class="project">
+        <h3>Quantum Logic Gates</h3>
+        <p>
+            In this project I tested my knowledge of quantum mechanics by creating a
+            <a href="https://github.com/Omega97/quantum_logic_gates">repository</a>
+            that contains a library for simulating quantum logic gates. The library enables the user to
+            visualize the process of applying quantum operators and to perform simple quantum algorithms.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Steganography</h3>
+        <p>
+            I created a
+            <a href="https://github.com/Omega97/steganography">repository</a>
+            that allows you to explore how steganography effects the individual bits of an image.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Neural Networks from Scratch</h3>
+        <p>
+            This
+            <a href="https://github.com/Omega97/neural_net_from_scratch">repository</a>
+            that I created allowed me to create and train a neural network from scratch.
+            This effort tested my knowledge and understanding of the subject.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Ramanujan Machine</h3>
+        <p>
+            The
+            <a href="https://arxiv.org/abs/1907.00205">Ramanujan Machine</a>
+            is a tool based on continued fractions and gradient descent. It allows finding interesting
+            equations for important mathematical constants. I created a
+            <a href="https://github.com/Omega97/Ramanujan_Machine">GitHub repository</a>
+            that successfuly implemented this tool, and it got featured in a
+            <a href="https://youtu.be/BXw8vQXxvqc?list=PLOjBt28t6kTvm_7W2lwWzEmXSJLWGaL5V&t=2205">Youtube video</a>
+            .
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Quantum Ground State Simulation</h3>
+        <p>
+            Using my knowledge in quantum mechanics, I created a
+            <a href="https://github.com/Omega97/quantum_ground_state_simulation">repository</a>
+            that allows you to simulate the ground state of a quantum system of interacting particles.
+            Given the potential, the program will find the ground state of the system using the variational method.
+            The program makes the distinction between bosons and fermions. It can also handle potentials with
+            a singularity at the origin.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Wave simulation</h3>
+        <p>
+            I created a simple simulation of a 2D wave using the Runge-Kutta method. The library allows to for
+            different boundary conditions, initial conditions and obstacles. The simulation can be exported to a GIF.
+        </p>
+    </div>
 
 </div>
 </body>
