--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </section>
     <hr>
 
+    <!-- Projects -->
     <section>
         <h2 class="section-title">Projects</h2>
 
@@ -370,7 +371,7 @@
             <div class="project-content">
                 <img src="images/quantum_logic_gates.png" alt="Quantum Logic Gates" class="project-image">
                 <div class="project-text">
-                    <h3>Quantum Logic Gates</h3>
+                    <h3>Quantum Logic Gates (Personal Project)</h3>
                     <p>
                         In this project, I tested my knowledge of quantum mechanics by creating a
                         <a href="https://github.com/Omega97/quantum_logic_gates">repository</a>
@@ -460,6 +461,41 @@
             </div>
         </div>
 
+    </section>
+
+    <!-- Other Projects -->
+    <section>
+        <h2 class="section-title">Other Projects</h2>
+
+        <div class="project">
+            <div class="project-content">
+                <img src="images/shimanami.png" alt="Shimanami RPG" class="project-image">
+                <div class="project-text">
+                    <h3>Shimanami – Narrative Role-Playing Game</h3>
+                    <p>
+                        A personal passion project: a full-fledged narrative tabletop RPG inspired by games like D&amp;D,
+                        set in a unique world blending mystery, philosophy, and exploration.
+                        The system emphasizes collaborative storytelling and character-driven arcs.
+                        <a href="https://github.com/Omega97/Shimanami">Explore the world of Shimanami</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-content">
+                <img src="images/new_beginning.png" alt="New Beginning Token System" class="project-image">
+                <div class="project-text">
+                    <h3>New Beginning – Token-Based Game System</h3>
+                    <p>
+                        A lightweight, modular game engine designed for fast-paced, token-driven gameplay.
+                        Built as part of the <em>Shimanami</em> universe, it offers a fresh alternative to traditional dice mechanics.
+                        Rules available in Italian:
+                        <a href="https://github.com/Omega97/Shimanami/blob/main/Meccaniche/New%20Beginning%20-%20Regole%20%E2%9A%AA.md">New Beginning Rules</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
 </div>
