--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- todo high school project -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -185,6 +186,9 @@
         </a>
         <a href="https://t.me/OmarFait" class="contact-item">
             <i class="fab fa-telegram"></i> Telegram
+        </a>
+        <a href="https://instagram.com/cusmafait" class="contact-item">
+            <i class="fab fa-instagram"></i> Instagram
         </a>
         <span class="contact-item">
             <i class="fab fa-discord"></i> Discord
