--- a/index.html
+++ b/index.html
@@ -818,6 +818,26 @@
                 </div>
             </div>
 
+            <!-- Peak Detection -->
+            <div class="project">
+                <div class="project-content">
+                    <img src="images/peak_detection.png" alt="Peak Detection" class="project-image">
+                    <div class="project-text">
+                        <h3>Peak Detection (Personal Project)</h3>
+                        <p>
+                            I created this simple
+                            <a href="https://colab.research.google.com/drive/14s2KM8RYuDLkx7SdXR0GRwLITt6vF1oV">CoLab</a>
+                            program to help a friend in automatically localizing and estimating
+                            the instensity of <b>peaks in real-life spectrometric data</b>. It applies
+                            a kernel to preserve the signal (up to the 3rd Taylor expansion order),
+                            and to remove statistical noise. Then, a 2nd order fit is performed around
+                            every data-point, to localize the peaks. Finally, clustering is applied on
+                            the peaks to remove redundant results.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <!-- Steganography -->
             <div class="project">
                 <div class="project-content">
