--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <!--        Loading communications...-->
 <!--    </div>-->
 
-    
+
     <div class="container">
 
 
@@ -394,7 +394,7 @@
 
         <!-- About -->
         <a class="section-anchor" id="about"></a>
-        <section id="about">
+        <section>
             <h2 class="section-title">About Me</h2>
             <p>
                 While pursuing my bachelor’s degree, I developed familiarity with complex problems
@@ -413,7 +413,7 @@
 
         <!-- Education -->
         <a class="section-anchor" id="education"></a>
-        <section id="education">
+        <section>
             <h2 class="section-title">Education and Training</h2>
             <p>
                 [2023] Bachelor’s degree in physics at the
@@ -524,7 +524,7 @@
 
         <!-- Projects -->
         <a class="section-anchor" id="projects"></a>
-        <section id="projects">
+        <section>
             <h2 class="section-title">My Projects</h2>
 
             <!-- Semantic Retrieval -->
